--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
-name = "qwk"
+name = "qwk-agent"
 version = "0.1.0"
 edition = "2024"
+
+[[bin]]
+name = "qwk"
+path = "src/main.rs"
 
 [dependencies]
 chrono = { version = "0.4.41", features = ["serde"] }
