--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/main.rs"
 chrono = { version = "0.4.41", features = ["serde"] }
 clap = { version = "4.5.40", features = ["derive"] }
 serde_json = "1.0.140"
+shlex = "1.3.0"
 
 [dev-dependencies]
 tempfile = "3.20.0"
